RedirectManager 클래스 생성